Added rough §3 and even rougher introduction

--- a/Non-essentialist, activity-grounded lifeforms.tex
+++ b/Non-essentialist, activity-grounded lifeforms.tex
@@ -1,5 +1,24 @@
-\documentclass{simpleDoc}
-\usepackage{simpleDoc}
+\documentclass{article}
+
+\usepackage{fontspec}
+\usepackage[latin, british]{babel}
+\usepackage[backend=biber, style=authoryear-comp, autocite=inline, sorting=nyt, sortcites=true, maxcitenames=2, natbib=true, maxnames=100]{biblatex}
+\usepackage[style=british, thresholdtype=words, threshold=38]{csquotes}
+\usepackage{cleveref}
+\usepackage[backgroundcolor=pink,bordercolor=pink,textsize=small]{todonotes}
+
+% References
+\addbibresource{Non-essentialist, activity-grounded lifeforms.bib}
+
+% Text expansion
+\newcommand{\dash}{\unskip{—}}
+
+% Foreign languages
+\newcommand\foreign[2]{\foreignlanguage{#1}{\emph{#2}}}
+
+\newcommand\texttitle[1]{\emph{#1}}
+
+\setmainfont{Hoefler Text}
 
 \title{Non-essentialist, activity-grounded lifeforms}
 \author{Barnaby R. Hutchins}
@@ -8,7 +27,94 @@
 
 \maketitle
 
+\begin{abstract}
+If we're looking for the grounds for a notion of lifeform in Spinoza's system, it might seem that the natural place to look, given his ontology, would be in the morphology of bodies, with action and ethics in turn grounded in that lifeform. Spinoza rejects anything like substantial forms that might be capable of imparting something like a species essence to individual things; if there's a difference between, e.g., humans and horses to be found, it makes sense to look for it in the seemingly obvious morphological differences. On such an interpretation, a horse has, and acts on, a specifically \textquote[E3p57s]{equine lust} just because it has a specifically equine morphology; similarly, humans are what's most useful for humans, and the activities of a human maximally "agree"  with the activities of other humans (E4p35c1), just because of their shared human morphology. A morphology-grounded reading, however, runs into serious issues when faced with Spinoza's treatment of bodies, chiefly because his ontology lacks the resources for a sufficiently robust speciation of morphologies.
+
+In this chapter, I argue instead for an activity-grounded conception of lifeform. On this conception, lifeforms are constituted through agreement in activity – it's not that human activities agree \emph{because} they are grounded in a human morphology; rather, it's that certain activities are human \emph{just insofar as} they all agree. The activities at stake are multiply realizable through the morphological level, allowing for a notion of lifeform that's compatible with Spinoza's continuism about morphology. Agreement in activity provides Spinoza with a concrete (if, admittedly, underexplained) ground for lifeform, and avoids the issues that come from looking to morphology to do the job. I argue that an activity-grounded reading tracks Spinoza's use of lifeform-related concepts, and that it results in a treatment of lifeforms as dynamic, mutable, and non-essentialist.
+\end{abstract}
+
 \section{Introduction}
+
+I am also not going to go into the much broader issue of essences in general in Spinoza's system. The question at stake in this chapter is, if there is something like a lifeform, in particular, in the system, what does it consist in? What can we point to in the world and say \enquote{that right there: that's a lifeform}? There are two gotchas in trying to answer that question. One is Spinoza's denial of real universals: there is no entity that is distributed throughout all humans that makes them human. So, if we are to find a lifeform, we can only find it in the particulars. Second, there is Spinoza's continuism about bodies: all change happens along a continuum, with no hard boundaries between one kind of body and another; that is, there are no real natural kinds of body. This is a problem because the obvious answer to the question of lifeform would be something about the morphology of bodies, but if the morphology of bodies is continuous, it is not clear what ontological resources there could be to build up a sufficiently robust notion of lifeform on that basis.
+
+I am not going to argue that there is no possible way to ground a notion of lifeform in morphology for Spinoza; indeed Tropper's chapter\todo{I think – or am I making stuff up here, Sarah?!} in this volume goes somewhat in that direction. Rather, I am going to argue for an alternative possibility: there are useful resources for grounding lifeform to be found activities \dash the stuff that singular things \emph{do} \dash and an activities-grounded reading fits well with the textual evidence and the ways in which Spinoza employs something-like-a-lifeform. Moreover, and ultimately more germane to my purposes here, an activities-grounded reading allows for a non-essentialist conception of lifeform, in which lifeforms get to be real and non-trivial aspects of the world, while still being fundamentally mutable.
+
+One initial issue is what actually counts as a \enquote{lifeform} for Spinoza. As the introduction to this volume points out, it's not a term he uses, but there are some good reasons to see something like the concept as being at work in his system, especially when he makes claims such as, \textquote[E4App\RN{9}]{\textins*{n}othing can agree more with the nature of any thing than other individuals of the same species}, or many of his references to \enquote{form}. But Spinoza endorses continuism about bodies: there are no hard boundaries between natural kinds, and no ontological resources to institute them. So there is some puzzle about the role of these notions in what we might broadly, and inaccurately, call Spinoza's philosophy of action that warrants addressing. That's a issue of what the notion of lifeform can do for a reading of Spinoza; there is also of what Spinoza can do for the notion of lifeform.
+
+Work on lifeforms in philosophy usually starts from a broadly Aristotelian framework, and usually assumes some non-trivial degree of essentialism: humans do humane things becomes of some underlying essential human lifeform; sharks do sharkish things because of some underlying essential shark lifeform; etc. Analysis of action in terms of lifeform is useful, but it would be good if it came without essentialist commitments attached. Spinoza's continuism undermines essentialism. This is precisely the reason that the role played by lifeforms in his system is so difficult to pin down: intuitively, lifeforms seem as though they should entail essence; to seek them out in a non-essentialist context seems like a category mistake. So if Spinoza does indeed have a coherent role for lifeforms to play, it breaks the expected entailment from lifeform to essence, providing a basis for a non-essentialist conception. For exactly the reason that the issue of lifeform in Spinoza's system is tricky, it is productive\todo{Not the right word}.
+
+What are the features of a non-essentialist notion of lifeform?\todo{Fill out}
+
 In the Aristotelian framework, you get lifeforms for free, as part of the basic ontology. Consequently, you don't need to find something else to which to reduce them. In a mechanistic framework, by contrast, you won't find lifeforms anywhere within the fundamental ontology: you have to build them out of more fundamental entities; whatever a lifeform is, it's going to have to be reducible to something else. The obvious place to look for a reductionist account is morphology.
 
+It might seem strange to ground something like lifeform in something like activity. Typically, we think of activities as derivatives of more fundamental entities. We tend to think of them as \emph{changes} in \emph{bodies}, or bodies, and we tend to think that the bodies persist while their activities change. On this understanding, activities are both ontologically posterior to bodies and, more or less, ephemeral, making them a seemingly rather poor choice as grounds for anything much at all. More specifically, and perhaps tellingly, we tend to think of activities as \dash or on the model of \dash modes of substances. If we think of bodies as substances, then of course we would expect bodies to be grounds. And, if a lifeform is some kind of constraint to activity, of course the notion of activities as grounds would look incoherent. Within a lot of frameworks, the substantival model of body–activity relations is apt enough: it obviously works for the Aristotelian framework, is canonical for the Cartesian framework, and seems to track most materialism and physicalisms. It's not clear, though, that this is an intuition that ought to apply to Spinoza's system, where bodies and activities are equally modal. While an argument could presumably be made that (modal) activities are still supposed to be only derivative of (modal) bodies, there does not seem to be anything in Spinoza's system to compell that reading, beyond trying to preserve our intuitions; nor does there seem to be much to support such a reading. Consequently, we can assume that bodies and activities are modes fundamentally on the same level, and that, whatever a lifeform might be, it can just as plausibly be grounded in activity as in body.
+
+Trying to talk about what something \emph{does} is oddly tricky in Spinoza's system. Spinoza talks about \enquote{actions}, but, strictly speaking, Spinozistic actions can only be \enquote{doings} that are grounded in reason; \enquote{actions} are too narrow a category for my purposes here. Conceptually, \enquote{motions} would probably do the job, but the term is intuitively jarring: intuitively, we tend to think of motion purely in terms of local motion; this chapter is about more than just local motion, so what's \emph{connoted} is again too narrow, even if \enquote{motion} does denote the correct set of things in principle. It's for these reasons that I've gone with \enquote{activities} \dash a term that Spinoza himself does not use. By \enquote{activity}, I mean simply what things do, or modal change, and I mean to avoid the restrictive implications of \enquote{actions}, while incurring as little linguistic awkwardness as possible.
+
+There are at least two, related, issues raised by this use of \enquote{activity}. First, if an activity is what something does, this sounds suspiciously substantival: there is some \emph{thing} that does some \emph{activity}. If what we're concerned with is specifically the activity \emph{of} things, then the things look very much as though they ought to be the grounds again. Here, I argue that, while particular activities are necessarily in relation with particular bodies, and while the particularity of both is salient to the role of lifeform, this does not in any way mean that the bodies involved have ontological priority over the activities involved.
+
+The second issue is that, if the term \enquote{activity} allows for a wider scope than \enquote{action}, then it looks as though we are allowing externally-determined motions into the picture. This is a feature, not a bug. To assume that the relevant activities for grounding a lifeform are only those that are internally determined is to beg the question on the essentialist's behalf: it's to assume that only what follows from the essence of a thing is informative about its lifeform.\todo{This is very not good}
+
+\section{Lifeform and morphology}\label{sec:Morphology}
+
+- Complexity – but where to draw the line, and what kind of complexity?
+
+\section{Lifeform and agreement}\label{sec:Agreement}
+Spinoza uses something like a notion of lifeform most explicitly in Part Four of the \texttitle{Ethics}, in the context of the discussion of inter-human relations. In the appendix to Part Four, he claims that \blockquote[E4App\RN{9}]{\textins*{n}othing can agree \textins{\foreign{latin}{convenire}} more with the nature of any thing than other individuals of the same species}. A natural reading of this passage \dash that is, a natural reading given substantivalist intuitions \dash is that there is some phenomenon called \enquote{agreement} that is grounded in some property called \enquote{species}: on this reading, \enquote{species} preexists, and is more fundamental than, \enquote{agreement}, such that we can have species without actual agreement (say, if the members of the species are dispersed here and there without meeting).
+
+What I am proposing here is an inversion of the grounding relations in this reading: it's not that species grounds agreement; rather, agreement is what grounds species. Read in this way, Spinoza's point is not that these particular things agree most with each other because they are all elements of a particular species-set, but that they are elements of a set of thing that maximally agree. A species just is a set of things that maximally agree. There does not seem to be anything in App\RN{9} that compels taking one interpretation over another, substantival intuitions aside. But the advantage of the agreement-priority reading over the species-priority reading is that provides a means of addressing the thorny species problem, rather than simply throwing us back into those thorns. It does, however, raise the issue of what exactly agreement might be: if a species is a set of things that maximally agree, what is it that they maximally agree in, or, for that matter, on?
+
+What E4App\RN{9} is summarising is E4P35c1: \blockquote[E4P35c1]{what is most useful to man is what most agrees \textins{\foreign{latin}{convenit}} with his nature (by P31C), that is (as is known through itself), man}. The overall point here is broadly the same as in the passage from App\RN{9}, albeit restricted to the human case. But it adds an extra layer: usefulness. The relationship between usefulness and agreement could again be read in a few different ways: (a) the agreement could explain the usefulness, or (b) the usefulness the agreement, or (c) the two could be mutually implicated, or ultimately ontologically identical. I'm going to argue for the latter, and for the added bonus that Spinoza's discussion of usefulness is informative about agreement.
+
+Now, admittedly, (a) does, on the face of it, look like the more promising option in light of the text: the discussion of agreement in E4P35 is tied to reason, and reason is ultimately tied to a thing's own essence (E3P4–7). On top of that, in the second corollary to E4P35, Spinoza explicitly equates usefulness to egoism: \textquote{\textins*{w}hen each man most seeks his own advantage for himself, then men are most useful to one another}, where a person's seeking their own advantage consists in \textquote{acting according to the laws of his own nature}. This does sound as though usefulness is being explained in terms of agreement, and agreement in terms of similarity in some pre-existing essence.
+
+However, the essence, or nature, in question here is the \enquote{actual essence} of the thing, or its conatus (E3P7). The conatus of a thing is active and dynamic; it's the \textquote[E3P7]{power of each thing, \emph{or} the striving by which it (either alone or with others) does anything, or strives to do anything}, which is merely \enquote{distinguished by reason, or rather verbally}, and is not \textquote[CM 1/6; G \RN{1}/248; {\cite[314]{C1}}]{in any way really distinct}, from the thing, or the essence thereof, itself.
+\footnote{On the dynamic reading of the conatus, see \cite[][Part 4, ch. 13]{RenzExplainability}}\todo{Add more refs}
+
+The point here is that a thing's actual essence is not ontologically distinct from its activity: there is no pre-existing essence that subsequently determines activity; rather, acting in such-and-such a way just is having such-and-such an essence, and having such-and-such an essence just is acting in such-and-such a way. In which case, the actual essence cannot be ontologically, or logically, prior to the activity, and neither can be \emph{the} explanation of the other \dash what you are does explain what you do, but only insofar as what you do explains what you are.
+
+This mutual implication structure is replicated in E4P31c (the passage referenced in E4P35c1 in relation to agreement and usefulness): \blockquote[][.]{\textins*{f}rom this it follows that the more a thing agrees with our nature, the more useful, \emph{or} better, it is for us, and conversely, the more a thing is useful to us, the more it agrees with our nature} This is a reasonably clear statement of mutual implication. In itself, though, it's fairly inconclusive with respect to ontological identity \dash assuming $p \iff q$, the statement will hold without needing to take $p$ and $q$ to be really identical. But, in light of conatus–actual-essence identity, there seems to be more than just biconditionality at stake here. E4P31d explicitly refers back to the conatus doctrine (through E3P6), as the basis from which the corollary follows.
+
+Moreover, E4P31 not only correlates agreement with usefulness (and vice versa), but also with goodness: E4P31 itself reads \textquote{\emph{\textins*{i}nsofar as a thing agrees with our nature, it is necessarily good}}. This initial correlation between agreement and goodness turns into a statement of identity in E4P31c: \textquote[my emphasis]{\textelp{} that which agrees with our nature, \emph{that is} (by P31), \textelp{} the good}. Given that Spinoza justifies the identification of agreement and goodness by appeal to P31 itself, it seems as though the implication between agreement and goodness in the proposition should be understood as an identity rather than a mere correlation: the good just is what agrees with our nature, and what agrees with our nature just is the good.
+
+This identity statement is then used as the basis for a restatement of the correlation between agreement and usefulness: \textquote[E4P31c; my emphasis]{\textins*{n}othing, therefore, can be good except insofar as it agrees with our nature. So the more a thing agrees with our nature, the more useful it is, \emph{and conversely}, q.e.d.}. Evidently, the good is identified with agreement, which is, at the very least, correlated with usefulness. Which brings us to\todo{Rephrase this} Spinoza's definition of the good: \textquote[E4D1; my emphasis][.]{\textins*{b}y good I shall understand what we certainly know to be \emph{useful} to us} E4D1, then, gives us good reason to take usefulness and goodness to be really identical.
+
+In the CM, this understanding of goodness is specifically linked to the conatus, where Spinoza criticises those who \textquote{labour under a false prejudice} in taking there to be such a thing as an absolute, \textquote[CM 1/6; G \RN{1}/248; {\cite[314]{C1}}]{Metaphysical good}. This is the same passage as discussed above, in which Spinoza classifies the distinction between a thing and its conatus as merely verbal: the real identity of thing and conatus is emphasised there in order to defend the position that there is no good beyond what a thing strives for (CM 1/6; G \RN{1}/247; {\cite[313]{C1}}) \dash to take the good to be ontologically distinct from conatus, and from a thing itself, is to \textquote[CM 1/6; G \RN{1}/248; {\cite[314]{C1}}][.]{confuse a distinction of reason with a real or modal distinction}
+% Good, agreement, usefulness, conatus, and actual essence all turn out to be merely verbally distinct
+
+From E3P7, we can say that a thing's actual essence and its conatus are identical. From CM, then, we get that goodness is merely verbally distinct from both a thing's conatus and the thing itself. E4D1 identifies goodness with usefulness. And E4P31 identifies goodness with agreement. What this gives us is a variety of transitive routes for concluding that usefulness and agreement are indeed identical \dash and are also identical to goodness, conatus, and actual essence.
+
+Perhaps this doesn't sound very helpful: we were looking to usefulness and agreement as means to ground a notion of lifeform, and we ended up with the actual essence of a singular thing, and with a whole lot of seemingly useful distinctions being eroded into identity. In other words, we seem to be right back at the problem of how to build up a notion of lifeform when all the available ontological resources are singular things. However, just because some things are really identical, it doesn't mean that the rational distinctions between them are uninformative. If we talk purely in terms of a singular thing's actual essence, we seem to be talking about something purely intrinsic. The same might, maybe somewhat less easily, be said of conatus. But all this becomes far harder to treat as purely intrinsic if we are looking through the lens of usefulness, agreement, or even the good, all of which seem to have non-trivial relational dependencies \dash \emph{this other thing} is useful to me, agrees with me, or is good for me.
+
+Many things \dash water when I'm dehydrated, a blanket when it's cold \dash seem to be good for me without themselves, presumably, sharing the human lifeform. These do not seem to be the kinds of things at stake in the strong statement of something-like-a-lifeform in E4P35, which focuses on humans insofar as they \textquote[E4P35d; my emphasis]{\emph{do} only those things which are good for human nature}. The concern here is with what humans \emph{do} that is good \dash ultimately, maximally good \dash for human nature. Most of the discussion that follows E4P35 focuses on what humans do when they act from reason. Reason is indeed going to have to be significant for the notion of lifeform, at least inasmuch as it constitutes the active, or agential, side of the notion (which is especially relevant for an ethics). But the Spinozistic lifeform also has a passive side. I go into more detail on the status of the agential and patientive aspects of lifeforms in \cref{sec:Reason}. For now, I just want to point out that, on Spinoza's account, a lifeform does not consist purely in what an agent does in isolation; it's how what's done by agents affects others that counts.
+
+This much is already implied in the emphasis on agreement. But it comes out more explicitly in the scholium to E4P35, where Spinoza switches to a focus on the passive side of things, specifically in the context of human society and the interactions it entails. He points out that \textquote{the society of our fellow men} is useful to us (we get \textquote{many more advantages than disadvantages} from it), and that, \blockquote[][.]{\textins*{m}en still find from experience that by helping one another they can provide themselves much more easily with the things they require, and that only by joining forces can they avoid the dangers which threaten on all sides \dash not to mention that it is much preferable and more worthy of our knowledge to consider the deeds of men, rather than those of the lower animals} The sociality illustrated here, along with the underscoring of the passive element, is already present in the accountof the conatus in E3P7, where Spinoza mentions \textquote[E3P7d; my emphasis]{\textelp{} the striving by which it (either alone or \emph{with others}) does anything}. Of those activities done by singular things, some agree with me, insofar as they are useful to me. It is not that I do certain activities from my own inherent nature, that other humans do certain activities from their own inherent natures, and that there is some shared set of properties, underlying our individual natures, that constitutes a general human nature, such that our actions are done independently but happen to agree because they derive from that shared nature. Rather, some activities agree with me \dash knitting blankets, say, or maintaining water treatment plants \dash and just insofar as some things produce those activities, and just insofar as I produce equivalently useful activities, those things and I share a nature, or participate in the same lifeform.
+
+Of course we \dash I'll restrict the phrasing to the human case here, for the sake of clarity, but the same should apply for any singular thing with a lifeform \dash are acted upon by a multitude of different things. Many, probably most, of those things (such as the blanket and water) are going to be non-human. So while everything that acts on me will presumably have to be involved in my own essence, a non-vacuous notion of lifeform will need to be more restrictive. I take it that instituting such restrictions is precisely what's going on in passages such as the discussion in E4P35: what gets included in the human lifeform are those things that most benefit from a particular set of activities. Thus, all those singular things for which humane activities are most useful are what we call \enquote{human}. By the same token, although humans might well interact with, say, trees, and might well do so in mutually beneficial ways (humans might plant or graft trees, and protect them from disease; trees might provide humans with fruit or wood, or simply shelter; and so on), tree-ish activities are not going to be maximally useful to humans, just because the human lifeform is defined as that for which humane activities are of maximal use. Those things for which tree-ish activities are of maximal use, we call \enquote{trees}.
+
+To be clear, the point here is not that there is some set of singular things called humans that are predisposed to maximally benefit from some set of humane activities. Rather, the set of humans is picked out by the set of humane activities. There needn't be any separate, particular, pre-existing property in the singular thing in virtue of which it benefits most from certain activities in order for a notion of lifeform construed in this way to work: satisfaction of maximal usefulness is, presumably, going to be multiply realisable at, say, the morphological level (see \cref{sec:ObjPriority}). What matters for the notion of lifeform are the mutually maximally useful \dash with respect to both the agents and patients involved \dash activities. The big advantage of an activity-priority notion over a morphology-priority notion of lifeform is that the former has a criterion of identification built in. While morphology-priority notions end up having to rely on extrinsic denominations to produce lifeform groupings. For an activity-priority notion, maximal agreement, in terms of maximal mutual usefulness, serves as the identity criterion. It's non-ad hoc, and it's objective, insofar as it involves what actually is maximally useful.\footnote{In this way, an activity-priority reading allows for robust error conditions in identifying lifeforms: you can be wrong in judging about the identity of a lifeform if you are wrong about what is actually in maximal agreement.}
+
+% On the issue of agreement, E4P35c1 refers back to E4P31c: \textquote[][.]{\emph{Insofar as a thing agrees with our nature, it is necessarily good}}
+
+\section{Reason and passion}\label{sec:Reason}
+Reason in itself is universal
+
+Striving insofar as something has adequate ideas and confused ideas (E3P9) – but only adequate ideas count? Clearly not: humans agree in what they provide for each other; $x$'s action to provide $y$ with a cup of coffee is a passion to $y$ – sure, it might be a fully rational thing for $x$, but its passionate aspect for $y$ is as significant a factor in participating in human nature as its rational aspect for $x$. Indeed, without both active and passive aspects, it could not be a participation in human nature (this is still true even if $x$ makes coffee for themselves – see what Spinoza says about something being both an action and a passion for the same subject).
+
+\section{Complicating the grounding relations}\label{sec:Complicating}
+
+\section{Priority relations between bodies and activities}\label{sec:ObjPriority}
+
+\section{What about morphology?}\label{sec:ObjMorphology}
+
+\section{Conclusion}\label{sec:Conclusion}
+Activity-priority reading of lifeform.
+
+It's a viable reading in Spinoza's system.
+
+Provides a non-essentialist conception of lifeform.
 \end{document}
+
+% Local Variables:
+% TeX-engine: xetex
+% End:
