--- a/Non-essentialist, activity-grounded lifeforms.bib
+++ b/Non-essentialist, activity-grounded lifeforms.bib
@@ -32,22 +32,31 @@ abstract = {},
 shorthand = {C}}
 
 @Book{C1,
-author = {Spinoza, Benedictus de},
-title = {The collected works of {{Spinoza}}},
-volume = {1},
-pages = {},
-editor = {Curley, E. M.},
+author     = {Spinoza, Benedictus de},
+title      = {The collected works of {{Spinoza}}},
+volume     = {1},
+pages      = {},
+editor     = {Curley, E. M.},
 translator = {Curley, E. M.},
-publisher = {Princeton University Press},
-address = {Princeton},
-year = {1985},
-abstract = {},
+publisher  = {Princeton University Press},
+address    = {Princeton},
+year       = {1985},
+abstract   = {},
 }
 
 @Bookinbook{CM,
-title = {Appendix Containing Metaphysical Thoughts},
-volume = {1},
-year = {1985},
-pages = {299--346},
-shorthand = {CM},
-crossref = {C}}
+  title     = {Appendix Containing Metaphysical Thoughts},
+  volume    = {1},
+  year      = {1985},
+  pages     = {299--346},
+  shorthand = {CM},
+  crossref  = {C}
+}
+
+@Article{Simpson:1945,
+  author       = {Simpson, George Gaylord},
+  title        = {The principles of classification and a classification of mammals},
+  journaltitle = {Bulletin of the American Museum of Natural History},
+  date         = {1945},
+  volume       = {85},
+}
